@@ -1,6 +1,8 @@
 
 SVN
 
+* Auto-scroll deployment log
+
 * Ability to cancel running deployments. Refactor deployment status.
 
 * Show recent deployments on the project page
